# AI4PDEs

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
AI4PDEs_structured/: AI4PDEs_bounds.py  AI4PDEs_utils.py
ai4pdes/: __init__.py  boundary_conditions.py  feedback.py  grid.py  multigrid.py  operators.py  output.py  plot_state.py  run.py  time_stepping.py  variables.py  viscosity.py
ai4pdes/models/: __init__.py  advection_diffusion.py  flow_past_block.py  flow_past_buidings.py  simulation.py
ai4pdes/structured/: AI4PDEs_bounds.py  AI4PDEs_utils.py  __init__.py  advection_diffusion.ipynb  flow_past_block.ipynb
docs/: index.rst
examples/: basic_example.py  flow_past_block.ipynb  flow_past_buildings.ipynb  tutorial_flow_past_block.ipynb
tests/: test_grid.py  test_operators.py
